--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -17,7 +17,7 @@
     <!-- style css -->
     <link rel="stylesheet" href="~/Content/css/hoitro-style-config.css" />
     <link rel="stylesheet" href="~/Content/css/hoitro-style.css">
-    @*<link rel="stylesheet" href="~/Content/css/style_manaAcc.css">*@
+    <link rel="stylesheet" href="~/Content/css/style_manaAcc.css">
     @*<link rel="stylesheet" href="~/Content/css/style_room.css">*@
     @*<link rel="stylesheet" href="~/Content/css/style_dangtin.css">*@
     <link rel="stylesheet" href="~/Content/css/style_signinsignout.css" />
@@ -53,7 +53,7 @@
             <a rel="nofollow" class="btn" href="javascript:void(0)"><i class="icon heart size-18"></i> Yêu thích <span class="number-count js-save-post-total hidden" style="display: none;">1</span></a>
             <a rel="nofollow" class="btn" href="/dang-nhap"><i class="icon register"></i> Đăng nhập</a>
             <a rel="nofollow" class="btn" href="/dang-ky"><i class="icon login"></i> Đăng ký</a>
-            @*<a rel="nofollow" class="btn" href="/quan-ly-tin-dang/1"><i class="icon login"></i>Tài khoản người dùng</a>*@
+            <a rel="nofollow" class="btn" href="/quan-ly-tin-dang/1"><i class="icon login"></i>Tài khoản người dùng</a>
             <!-- chưa xử lí đăng nhập nên để id account mặc định là 1 -->
             <a rel="nofollow" class="btn btn-add-post" href="dang-tin-moi"><i></i>Đăng tin miễn phí</a>
         </div>
@@ -141,6 +141,15 @@
     <script src="~/Scripts/js/jquery.min.js"></script>
     <script src="~/Scripts/js/bootstrap.bundle.min.js"></script>
     <script src="~/Scripts/js/jquery-3.0.0.min.js"></script>
+    <script src="~/Scripts/js/js-one-image-wrapper.js"></script>
+    <script src="~/Scripts/js/js-one-image-inner.js"></script>
+    <script src="~/Scripts/js/js-one-image-preview.js"></script>
+    <script src="~/Scripts/js/js-remove-one-image.js"></script>
+    <script src="~/Scripts/js/js-change-image-file.js"></script>
+    <script src="~/Scripts/js/js-input-value.js"></script>
+
+    <script src="~/Scripts/js/js-form-submit-data.js"></script>
+    <script src="~/Scripts/js/js-frm-manage-post.js"></script>
     <!-- sidebar -->
     <script src="~/Scripts/js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="~/Scripts/js/custom.js"></script>
