--- a/Areas/Admin/Views/Menus/Index.cshtml
+++ b/Areas/Admin/Views/Menus/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<HoiTroWebsite.Models.Menu>
+﻿@using HoiTroWebsite.Help
 
+@model IEnumerable<HoiTroWebsite.Models.Menu>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
@@ -13,157 +14,168 @@
     <!-- DataTables Responsive CSS -->
     <link href="~/Areas/Admin/Content/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
 }
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading">
             Quản lý Menu
         </div>
         <div class="panel-body">
-            <div id="dataTables-example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="dataTables_length" id="dataTables-example_length">
-                            <label>
-                                Show <select name="dataTables-example_length" aria-controls="dataTables-example"
-                                             class="form-control input-sm">
-                                    <option value="10">10</option>
-                                    <option value="25">25</option>
-                                    <option value="50">50</option>
-                                    <option value="100">100</option>
-                                </select> entries
-                            </label>
-                        </div>
+            <div class="panel-body">
+                <div class="bs-example" style="text-align:right; padding-bottom:10px;">
+                    <div class="btn-group">
+                        @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span> Thêm mới", "Create New", "Create", "Menus", new { }, new { @class = "btn btn-primary" })
                     </div>
-                    <div class="col-sm-6">
-                        <div id="dataTables-example_filter" class="dataTables_filter">
-                            <label>
-                                Search:<input type="search"
-                                              class="form-control input-sm" placeholder="" aria-controls="dataTables-example">
-                            </label>
+                    <div id="dataTables-example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <div class="dataTables_length" id="dataTables-example_length">
+                                    <label>
+                                        Show <select name="dataTables-example_length" aria-controls="dataTables-example"
+                                                     class="form-control input-sm">
+                                            <option value="10">10</option>
+                                            <option value="25">25</option>
+                                            <option value="50">50</option>
+                                            <option value="100">100</option>
+                                        </select> entries
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col-sm-10">
+                                <div id="dataTables-example_filter" class="dataTables_filter">
+                                    <label>
+                                        Search:<input type="search"
+                                                      class="form-control input-sm" placeholder="" aria-controls="dataTables-example">
+                                    </label>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <!-- chèn bảng  -->
-                <div class="row">
-                    <!-- /.panel-heading -->
-                    <div class="col-lg-12">
-                        <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.name)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.link)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.meta)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.hide)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.order)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.datebegin)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.hasSubMenu)
-                                </th>
-                                <th></th>
-                            </tr>
+                        <!-- chèn bảng  -->
+                        <div class="row">
+                            <!-- /.panel-heading -->
+                            <div class="col-lg-12">
+                                <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                    <tr>
+                                        <th>
+                                            @Html.DisplayName("Tên")
+                                        </th>
+                                        <th>
+                                            @Html.DisplayName("Liên kết")
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.meta)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayName("Hiển thị")
+                                        </th>
+                                        <th>
+                                            @Html.DisplayName("Sắp xếp")
+                                        </th>
+                                        <th>
+                                            @Html.DisplayName("Ngày tạo")
+                                        </th>
+                                        <th>
+                                            @Html.DisplayName("Có menu con")
+                                        </th>
+                                        <th>
+                                            @Html.DisplayName("Menu con")
+                                        </th>
+                                        <th></th>
+                                    </tr>
 
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.link)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.meta)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.hide)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.order)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.datebegin)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.hasSubMenu)
-                                    </td>
-                                    <td>
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                                        @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.id })
-                                    </td>
-                                </tr>
-                            }
-                        </table>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="dataTables_info" id="dataTables-example_info" role="status" aria-live="polite">
-                            Showing 1 to
-                            10 of 57 entries
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.name)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.link)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.meta)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.hide)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.order)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.datebegin)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.hasSubMenu)
+                                            </td>
+                                            <td>
+                                                @foreach (var s in item.SubMenus)
+                                                {
+                                                    <div>@s.name</div>
+                                                }
+                                            </td>
+                                            <td>
+                                                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+                                                @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                                            </td>
+                                        </tr>
+                                    }
+                                </table>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="dataTables_paginate paging_simple_numbers" id="dataTables-example_paginate">
-                            <ul class="pagination">
-                                <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0"
-                                    id="dataTables-example_previous"><a href="#">Previous</a></li>
-                                <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">1</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">2</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">3</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">4</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">5</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">6</a>
-                                </li>
-                                <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0"
-                                    id="dataTables-example_next"><a href="#">Next</a></li>
-                            </ul>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="dataTables_info" id="dataTables-example_info" role="status" aria-live="polite">
+                                    Showing 1 to
+                                    10 of 57 entries
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="dataTables_paginate paging_simple_numbers" id="dataTables-example_paginate">
+                                    <ul class="pagination">
+                                        <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0"
+                                            id="dataTables-example_previous"><a href="#">Previous</a></li>
+                                        <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
+                                            <a href="#">1</a>
+                                        </li>
+                                        <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                            <a href="#">2</a>
+                                        </li>
+                                        <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                            <a href="#">3</a>
+                                        </li>
+                                        <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                            <a href="#">4</a>
+                                        </li>
+                                        <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                            <a href="#">5</a>
+                                        </li>
+                                        <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                            <a href="#">6</a>
+                                        </li>
+                                        <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0"
+                                            id="dataTables-example_next"><a href="#">Next</a></li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- /.table-responsive -->
+            <div class="well">
+                <h4>DataTables Usage Information</h4>
+                <p>
+                    DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized
+                    version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome
+                    icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.
+                </p>
+                <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">
+                    View DataTables
+                    Documentation
+                </a>
+            </div>
         </div>
     </div>
-    <!-- /.table-responsive -->
-    <div class="well">
-        <h4>DataTables Usage Information</h4>
-        <p>
-            DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized
-            version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome
-            icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.
-        </p>
-        <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">
-            View DataTables
-            Documentation
-        </a>
-    </div>
-</div>
 
 @section _Footer
 {
